--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
+- degree: Full Stack Webdeveloper Nanodegree  , hooray
+  uni: Hamburg
+  year: June, 1999 &mdash; January, 2005
+  # awards: all
   # summary:
